[project]
name = "ladon-crawl"
version = "0.0.1"
description = "A Python framework for building structured, resumable web crawlers that produce typed domain records."
readme = "README.md"
requires-python = ">=3.12"
license = {text = "AGPL-3.0-only"}
authors = [
    {name = "Alessio Pascucci", email = "feeder81@gmail.com"},
]
keywords = [
    "web-crawler",
    "crawler",
    "scraper",
    "web-scraping",
    "data-pipeline",
    "llm",
    "training-data",
    "structured-data",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: GNU Affero General Public License v3",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Internet :: WWW/HTTP :: Indexing/Search",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]

dependencies = [
    "requests>=2.28",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov",
    "pre-commit",
    "pyright>=1.1",
    "black",
    "ruff",
    "isort",
]

[project.urls]
Homepage = "https://github.com/MoonyFringers/ladon"
Repository = "https://github.com/MoonyFringers/ladon"
Issues = "https://github.com/MoonyFringers/ladon/issues"
Documentation = "https://moonyfringers.github.io/ladon"

[build-system]
requires = ["setuptools>=65", "wheel"]
build-backend = "setuptools.build_meta"

# ----------------------------------------
# BLACK
# ----------------------------------------
[tool.black]
line-length = 80
target-version = ['py312']
extend-exclude = '''
# A regex preceded with ^/ will apply only to files and directories
# in the root of the project.
# As this is 'extend', we already exclude everything in .gitignore.
^/(
  (
    resources
  )/
)
'''

# ----------------------------------------
# ISORT
# ----------------------------------------
[tool.isort]
profile = "black"
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
line_length = 80
extend_skip_glob = ["resources/*"]

# ----------------------------------------
# RUFF
# ----------------------------------------
[tool.ruff]
line-length = 80
respect-gitignore = true
extend-exclude = [
    "resources/*",
]

[tool.ruff.lint]
select = ["E", "F", "W", "B"]
ignore = [
    "E501",  # Handled by Black
]

# ----------------------------------------
# PYRIGHT
# ----------------------------------------
[tool.pyright]
typeCheckingMode = "strict"
include = ["src", "tests"]
extraPaths = ["src"]
reportMissingImports = "none"
reportUntypedFunctionDecorator = "none"

# ----------------------------------------
# PYTEST
# ----------------------------------------
[tool.pytest.ini_options]
pythonpath = ["src"]
